# opencog-central

./: .gitignore  ARCHITECTURE.md  BUILD_ORDER_PLAN.md  CIRCLECI_CMAKELISTS_COMPARISON.md  CMakeLists.txt  COMPONENT_AUDIT_FINAL_REPORT.md  CONSOLIDATED_README.md  DEPENDENCY_DIAGRAM.md  ECOSYSTEM_DOCUMENTATION.md  PHASE2_COMPLETION.md  README.md  analyze_dependencies.py  audit_components.py  build-all.sh  clone_repos.sh  cmake_dependencies.json  collect_readmes.py  component_audit_report.json  drzo chat folder housekeeping reorganization.md  generate_build_order.py  generate_consolidated_readme.py  generate_ecosystem_docs.py  generate_mermaid_diagrams.py  package-lock.json  repos_list.txt  run_all_cogs.sh
.circleci/: config.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json  init.scm  opencog.scm  setup.sh  test-config.sh
.github/: dependabot.yml
.github/workflows/: build-atomspace-chain.yml  ci-org-Bik-v8.yml  ci-org-v4.yml  ci-org-v7.yml  codeqladv.yml  consolidation.yml  copy-scm-files.yml  copy-yml-files.yml  fetch.yml
README/: README.md  README.md_README_1_2.md  README.md_README_1_2_3.md  benchmark_query-trite_README.md
atomspace-explorer/: README-IMPLEMENTATION.md  angular.json  npm-shrinkwrap.json  package-lock.json  package.json  test-data-formats.html  test-websocket.html
atomspace-explorer/src/app/: app.config.ts  app.module.ts
atomspace-explorer/src/app/connect/: connect.module.ts
atomspace-explorer/src/app/connect/url-connect/: atom-data-adapter.service.ts  atomspace-websocket.service.ts  url-connect.component.html  (+2 more)
atomspace-explorer/src/app/visualizer/: README.md  index.ts  visualizer.component.ts  visualizer.integration.spec.ts  visualizer.module.ts
atomspace-explorer/src/assets/: atoms-new-format.json
atomspace-typescript/: package-lock.json  package.json
atomspace/opencog/atoms/core/: TypeUtils.cc
cmakelists/: CONSOLIDATED_CMakeLists.txt
copied-yml/.github/workflows/: ci456.yml  codeqladv.yml
docker/opencog/learn/: README.md
docs/: ARCHITECTURE_INDEX.md
integrated_output/: integrated_output.txt
linkgrammar-relex-web/: requirements.txt
opencog/opencog/nlp/prompt-patterns/: CMakeLists.txt  cognitive-skeleton.scm  config-template.scm  dialogue-patterns.scm  emotional-patterns.scm  integration-patterns.scm  test-patterns.scm
orc-ai/: README.md
orc-ai/learn/: .gitignore
orc-as/atomspace-explorer/: npm-shrinkwrap.json  package-lock.json  package.json
orc-as/atomspace-explorer/src/app/: app.routes.ts
orc-as/atomspace-storage/: CMakeLists.txt  README.md
orc-as/atomspace-storage/examples/: CMakeLists.txt
orc-as/atomspace-storage/opencog/: CMakeLists.txt
orc-as/atomspace-storage/opencog/persist/: CMakeLists.txt
orc-as/atomspace-storage/tests/: CMakeLists.txt
orc-as/atomspace-typescript/: package-lock.json  package.json
orc-bi/: README.md
orc-ct/: README.md
orc-dv/: README.md
orc-dv/.devcontainer/: Dockerfile  devcontainer.json
orc-em/: README.md
orc-gm/: README.md
orc-in/: README.md
orc-in/.github/: pull_request_template.md
orc-in/.github/workflows/: ci-org-v7.yml  consolidation.yml  docker-publish.yml  unified-build.yml
orc-in/copied-cmake/copied-cmake/orc-as/: CMakeLists.txt
orc-in/copied-yml/: cogbots.prompt.yml
orc-in/copied-yml/.github/workflows/: sync.yml
orc-in/copied-yml/orc-as/.circleci/: config.yml
orc-in/docs/: ARCHITECTURE_INDEX.md  COGNITIVE_PATTERNS.md
orc-in/python_packages/001-kokkos-ci-containers_py/: setup.py
orc-in/python_packages/RNN-RC-Chaos_py/: setup.py
orc-in/python_packages/acme-client_py/: setup.py
orc-in/python_packages/atomspace-dht_py/: setup.py
orc-in/python_packages/atomspace-metta_py/: setup.py
orc-in/python_packages/atomspace-rpc_py/: setup.py
orc-in/python_packages/benchmark_py/: setup.py
orc-in/python_packages/ci-containers_py/: setup.py
orc-in/python_packages/disposable-email-domains_py/: setup.py
orc-in/scripts/: BuildCog.sh  JuliaCog.sh  OpenCoq.sh  PyCog.sh  RustCog.sh  TerraCog.sh  generate_repos_list.sh  test-cognitive-ci.sh
orc-nl/: README.md
orc-nl/linkgrammar-relex-web/: requirements.txt
orc-oc/: CMakeLists.txt  README.md
orc-oc/.circleci/: config.yml
orc-oc/opencog-neo4j/: pom.xml
orc-oc/opencog/opencog/nlp/prompt-patterns/: QUICKSTART.md  README.md
orc-ro/: README.md
orc-sv/: README.md
orc-wb/: README.md
orc-wb/python_packages/MORK_py/: setup.py
orc-wb/python_packages/PyPdnsRedis_py/: setup.py
orc-wb/python_packages/TinyCog_py/: setup.py
orc-wb/python_packages/array_ref_py/: setup.py
orc-wb/python_packages/atomspace-agents_py/: setup.py
orc-wb/python_packages/atomspace-cog_py/: setup.py
orc-wb/python_packages/atomspace-explorer_py/: setup.py
orc-wb/python_packages/atomspace-ipfs_py/: setup.py
orc-wb/python_packages/attention_py/: setup.py
orc-wb/python_packages/blender_api_py/: setup.py
orc-wb/python_packages/blog_py/: setup.py
orc-wb/python_packages/code-examples_py/: setup.py
orc-wb/python_packages/cogprotolab_py/: setup.py
orc-wb/python_packages/dimensional-embedding_py/: setup.py
orc-wb/python_packages/distributional-value_py/: setup.py
python_packages/Echo-State-Networks_py/: setup.py
python_packages/ProgrammingGuide_py/: setup.py
python_packages/Vereya_py/: setup.py
python_packages/agents_py/: setup.py
python_packages/agi-bio_py/: setup.py
python_packages/asmoses_py/: setup.py
python_packages/atlantis_py/: setup.py
python_packages/atomspace-bridge_py/: setup.py
python_packages/atomspace-js_py/: setup.py
python_packages/atomspace-restful_py/: setup.py
python_packages/atomspace-rocks_py/: setup.py
python_packages/atomspace-typescript_py/: setup.py
python_packages/atomspace-websockets_py/: setup.py
python_packages/atomspace_py/: setup.py
python_packages/chaining_py/: setup.py
python_packages/cheminformatics_py/: setup.py
python_packages/cli_py/: setup.py
python_packages/cogserver_py/: setup.py
python_packages/cogutil_py/: setup.py
python_packages/dav4rack_py/: setup.py
python_packages/destin_py/: setup.py
scripts/: Kokkog.sh
(+29 files in other folders)
